--- a/tests/mbed/host/CMakeLists.txt
+++ b/tests/mbed/host/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(libmbedtest_host host.c ocalls.c ${gen})
 target_compile_options(libmbedtest_host PRIVATE -Wno-error)
 
 target_include_directories(libmbedtest_host PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+target_compile_definitions(libmbedtest_host PRIVATE CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(libmbedtest_host oehostapp)
