--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,8 +1,3 @@
-def PowerShellWrapper(psCmd) {
-    psCmd = psCmd.replaceAll("\r", "").replaceAll("\n", "")
-    bat "powershell.exe -NonInteractive -ExecutionPolicy Bypass -Command \"\$ErrorActionPreference='Stop';[Console]::OutputEncoding=[System.Text.Encoding]::UTF8;$psCmd;EXIT \$global:LastExitCode\""
-}
-
 def ACCTest(String label, String compiler, String unit, String suite) {
     def c_compiler
     def cpp_compiler
@@ -158,8 +153,10 @@ def win2016DebugLinuxElfBuild() {
             cleanWs()
             checkout scm
             unstash 'linuxdebug'
-            PowerShellWrapper('mv build linuxbin')
-            PowerShellWrapper('./scripts/test-build-config.ps1 -add_windows_enclave_tests -build_type Debug -linux_bin_dir $ENV:WORKSPACE/linuxbin/tests')
+            bat 'move build linuxbin'
+            dir('build') {
+                bat "vcvars64.bat x64 && cmake.exe -G \"Visual Studio 15 2017 Win64\" -DADD_WINDOWS_ENCLAVE_TESTS=1 -DCMAKE_BUILD_TYPE=Debug -DLINUX_BIN_DIR=${WORKSPACE}\\linuxbin\\tests .. && msbuild ALL_BUILD.vcxproj -p:Configuration=Debug && ctest.exe -V -C Debug"
+            }
        }
     }
 }
@@ -190,8 +187,10 @@ def win2016ReleaseLinuxElfBuild() {
             cleanWs()
             checkout scm
             unstash 'linuxrelease'
-            PowerShellWrapper('mv build linuxbin')
-            PowerShellWrapper('./scripts/test-build-config.ps1 -add_windows_enclave_tests -build_type Release -linux_bin_dir $ENV:WORKSPACE/linuxbin/tests')
+            bat 'move build linuxbin'
+            dir('build') {
+                bat "vcvars64.bat x64 && cmake.exe -G \"Visual Studio 15 2017 Win64\" -DADD_WINDOWS_ENCLAVE_TESTS=1 -DCMAKE_BUILD_TYPE=Release -DLINUX_BIN_DIR=${WORKSPACE}\\linuxbin\\tests .. && msbuild ALL_BUILD.vcxproj -p:Configuration=Release && ctest.exe -V -C Release"
+            }
         }
     }
 }
@@ -201,7 +200,11 @@ def win2016DebugCrossCompile() {
         node('SGXFLC-Windows') {
             cleanWs()
             checkout scm
-            PowerShellWrapper('./scripts/test-build-config.ps1 -build_type Debug -build_enclaves')
+            dir('build') {
+                withEnv(["CC=cl.exe","CXX=cl.exe"]) {
+                    bat "vcvars64.bat x64 && cmake.exe -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_ENCLAVES=1 .. && ninja.exe && ctest.exe -V -C Debug"
+                }
+            }
        }
     }
 }
@@ -211,7 +214,11 @@ def win2016ReleaseCrossCompile() {
         node('SGXFLC-Windows') {
             cleanWs()
             checkout scm
-            PowerShellWrapper('./scripts/test-build-config.ps1 -build_type Release -build_enclaves')
+            dir('build') {
+                withEnv(["CC=cl.exe","CXX=cl.exe"]) {
+                    bat "vcvars64.bat x64 && cmake.exe -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_ENCLAVES=1 .. && ninja.exe && ctest.exe -V -C Release"
+                }
+            }
         }
     }
 }
