--- a/.jenkins/libcxx/Jenkinsfile
+++ b/.jenkins/libcxx/Jenkinsfile
@@ -1,23 +1,33 @@
 import jenkins.model.Jenkins
 
+SLAVES = ["libcxx-xenial-vm.eastus.cloudapp.azure.com", "libcxx-bionic-vm.eastus.cloudapp.azure.com"]
+
+String dockerBuildArgs(String... args) {
+    String argumentString = ""
+    for(arg in args) {
+        argumentString += " --build-arg ${arg}"
+    }
+    return argumentString
+}
+
 def azureEnvironment(String task) {
     node("nonSGX") {
         cleanWs()
         checkout scm
-        def azure_image = docker.build("oetools-deploy", ".jenkins/libcxx" )
+        String buildArgs = dockerBuildArgs("UID=\$(id -u)",
+                                           "GID=\$(id -g)",
+                                           "UNAME=\$(id -un)",
+                                           "GNAME=\$(id -gn)")
+        def azure_image = docker.build("oetools-deploy", "${buildArgs} .jenkins/libcxx" )
         azure_image.inside {
             withCredentials([usernamePassword(credentialsId: 'SERVICE_PRINCIPAL_OSTCLAB',
                                               passwordVariable: 'SERVICE_PRINCIPAL_PASSWORD',
                                               usernameVariable: 'SERVICE_PRINCIPAL_ID'),
                              string(credentialsId: 'OSCTLabSubID', variable: 'SUBSCRIPTION_ID'),
                              string(credentialsId: 'TenantID', variable: 'TENANT_ID')]) {
-                dir("${WORKSPACE}") {
-                    withEnv(["AZURE_CONFIG_DIR=${WORKSPACE}"]) {
-                        sh "az login --service-principal -u ${SERVICE_PRINCIPAL_ID} -p ${SERVICE_PRINCIPAL_PASSWORD} --tenant ${TENANT_ID}"
-                        sh "az account set --subscription ${SUBSCRIPTION_ID}"
-                        sh """${task}"""
-                    }
-                }
+                sh "az login --service-principal -u ${SERVICE_PRINCIPAL_ID} -p ${SERVICE_PRINCIPAL_PASSWORD} --tenant ${TENANT_ID} && \
+                    az account set --subscription ${SUBSCRIPTION_ID}"
+                sh """${task}"""
             }
         }
     }
@@ -44,20 +54,19 @@ def ACCDeployVM(String version) {
 
 
 def registerJenkinsSlaves() {
-    def slaves = ["libcxx-xenial-vm.eastus.cloudapp.azure.com", "libcxx-bionic-vm.eastus.cloudapp.azure.com"]
     stage("Register Jenkins slaves") {
             withCredentials([usernamePassword(credentialsId: 'oe-ci',
                                               passwordVariable: 'JENKINS_ADMIN_PASSWORD',
                                               usernameVariable: 'JENKINS_ADMIN_NAME')]) {
                 azureEnvironment("""echo "[linux-agents]" > scripts/ansible/inventory/hosts
-                                    echo ${slaves[0]} >> scripts/ansible/inventory/hosts
-                                    #echo ${slaves[1]} >> scripts/ansible/inventory/hosts
+                                    echo ${SLAVES[0]} >> scripts/ansible/inventory/hosts
+                                    #echo ${SLAVES[1]} >> scripts/ansible/inventory/hosts
                                     
-                                    echo jenkins_agent_label: "hardware" > scripts/ansible/inventory/host_vars/${slaves[0]}
-                                    echo jenkins_agent_name: "${slaves[0]}" > scripts/ansible/inventory/host_vars/${slaves[0]}
+                                    echo jenkins_agent_label: "hardware" > scripts/ansible/inventory/host_vars/${SLAVES[0]}
+                                    echo jenkins_agent_name: "${SLAVES[0]}" > scripts/ansible/inventory/host_vars/${SLAVES[0]}
                                     
-                                    #echo jenkins_agent_label: "hardware" > scripts/ansible/inventory/host_vars/${slaves[1]}
-                                    #echo jenkins_agent_name: "${slaves[1]}" > scripts/ansible/inventory/host_vars/${slaves[1]}
+                                    #echo jenkins_agent_label: "hardware" > scripts/ansible/inventory/host_vars/${SLAVES[1]}
+                                    #echo jenkins_agent_name: "${SLAVES[1]}" > scripts/ansible/inventory/host_vars/${SLAVES[1]}
 
                                     az keyvault secret show --vault-name oe-ci-test-kv --name id-rsa-oe-test | jq -r .value | base64 -d > id-rsa-oe-test
                                     chmod 400 id-rsa-oe-test
@@ -73,7 +82,7 @@ def registerJenkinsSlaves() {
 def deleteJenkinsSlaves() {
     stage("Delete Jenkins slaves") {
         Jenkins.instance.nodes.each { slave ->
-            if (slave.name in slaves) {
+            if (slave.name in SLAVES) {
                 println "Deleting slave $slave.name"
                 Jenkins.instance.removeNode(slave)
             }
